--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<h1>MANALI</h1> <br>
+	<p>lorem</p>
+	<ol>
+		<li><b>lorem</b>ipsum</li>
+		<li><b>lorem</b>ipsum</li>
+		<li><b>lorem</b>ipsum</li>
+		<li><b>lorem</b>ipsum</li>
+		<li><b>lorem</b>ipsum</li>
+		
+	</ol>
+	<ul>
+	  <li><b>lorem</b>ipsum</li>
+	  <li><b>lorem</b>ipsum</li>
+	  <li><b>lorem</b>ipsum</li>
+	  <li><b>lorem</b>ipsum</li>
+	  <li><b>lorem</b>ipsum</li>
+		
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
