--- a/main.html
+++ b/main.html
@@ -10,19 +10,19 @@
 	<h1>MANALI</h1> <br>
 	<p>lorem</p>
 	<ol>
-		<li><b>lorem</b>ipsum</li>
-		<li><b>lorem</b>ipsum</li>
-		<li><b>lorem</b>ipsum</li>
-		<li><b>lorem</b>ipsum</li>
-		<li><b>lorem</b>ipsum</li>
+		<li><b><i>lorem</i></b>ipsum</li>
+		<li><b><i>lorem</i></b>ipsum</li>
+		<li><b><i>lorem</i></b>ipsum</li>
+		<li><b><i>lorem</i></b>ipsum</li>
+		<li><b><i>lorem</i></b>ipsum</li>
 		
 	</ol>
 	<ul>
-	  <li><b>lorem</b>ipsum</li>
-	  <li><b>lorem</b>ipsum</li>
-	  <li><b>lorem</b>ipsum</li>
-	  <li><b>lorem</b>ipsum</li>
-	  <li><b>lorem</b>ipsum</li>
+	  <li><b><i>lorem</i></b>ipsum</li>
+	  <li><b><i>lorem</i></b>ipsum</li>
+	  <li><b><i>lorem</i></b>ipsum</li>
+	  <li><b><i>lorem</i></b>ipsum</li>
+	  <li><b><i>lorem</i></b>ipsum<i>lorem</i></li>
 		
 	</ul>
 	<!-- the entire body must be written by student -->
